# esp32_nat_router_plus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_web_pages.bat  build_web_pages.sh  partitions.csv  platformio.ini  post_extra_script.py  pre_extra_script.py  sdkconfig.esp32dev  sdkconfig.esp32dev.old  start_web_server.bat  start_web_server.sh
components/cmd_nvs/: cmd_nvs.c
components/cmd_router/: CMakeLists.txt  router_globals.h
components/cmd_system/: CMakeLists.txt  cmd_system.c  cmd_system.h
components/console_handler/: CMakeLists.txt  console_handler.c  file_system.c
components/console_handler/include/: console_handler.h  file_system.h
components/hardware_handler/: CMakeLists.txt  button_handler.c  hardware_handler.c  led_handler.c
components/hardware_handler/include/: button_handler.h  (+2 more)
components/ota_handler/: CMakeLists.txt  README.md  ota_handler.c
components/router_handler/: CMakeLists.txt  router_handler.c
components/utils/: CMakeLists.txt  initialization.c  mac_filter.c  mac_generator.c  nvm.c  utils.c
components/web_server/: CMakeLists.txt  auth_handler.c  get_data_handler.c  request_handler.c  response_handler.c  storage_handler.c  web_server.c
components/web_server/include/: auth_handler.h  get_data_handler.h  request_handler.h  storage_handler.h  web_server.h
components/web_server/www/: README.md
components/web_server/www/html/: APScanResults.json  Gemfile  _config.yml  dark.scss  index.html  info.html  main.scss  settings.html  settings.json  sysinfo.json
components/web_server/www/html/_i18n/: english copy.yml  english.yml
components/web_server/www/html/_includes/: nav.html
components/web_server/www/html/_layouts/: html.html
components/web_server/www/html/js/: functions.js  info.js  scan.js  settings.js
components/wifi_handler/: CMakeLists.txt  wifi_event_handler.c  wifi_handler.c  wifi_init.c
components/wifi_handler/include/: wifi_event_handler.h  wifi_handler.h  wifi_init.h
docs/: Advanced_topics.md  Build_setup.md
src/: CMakeLists.txt  esp32_nat_router.c
(+7 files in other folders)
